cleanup actual mdx file

--- a/content/docs/rulesets/sandbox.mdx
+++ b/content/docs/rulesets/sandbox.mdx
@@ -1,56 +1,278 @@
 ---
 title: Sandbox
-description: ...
+description: Experimental ruleset for testing balance changes and new mechanics
 ---
 
 ## Overview
-Designed for testing and experimentation ...
 
-Based on Standard ruleset, with the following changes:
+The Sandbox ruleset is designed for testing and experimentation with balance changes and new mechanics before they are considered for the Standard ruleset. It serves as a proving ground for card modifications, new interactions, and gameplay adjustments.
 
-Overview ...
+Based on the Standard ruleset, with the following changes:
 
-## Gameplay changes
-- Comeback gold mechanic changed. Before: $4 per life lost. After: $3 per completed Ante.
-- The order ENABLED
-- Score preview DISABLED
-- Justice
+## Gameplay Changes
 
+- **Comeback Gold Mechanic:** Changed from $4 per life lost to $3 per completed Ante
+- **The Order:** Re-enabled in the joker pool with modified effect
+- **Score Preview:** Disabled
+- **Justice Tarot Card:** Re-enabled (Glass cards break at 1/3 rate)
 
-## Jokers
+## Modified Jokers
 
-- Idol: Picks one of three custom Idols. Idol is now RARE.
-- Rotating from a pool whenever steph decides to, picks 5 ...
+<div className={'relative overflow-auto'}>
+	<table>
+		<thead>
+		<tr>
+			<th className={'text-center'}>Joker</th>
+			<th>Old Description</th>
+			<th>New Description</th>
+			<th>Notes</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td>
+				#### Magnet [toc]
+				<JokerCard name={'Magnet'} img={'/cards/j_magnet.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Disabled in Standard ruleset</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Re-added to joker pool</span>
+					<span><Hands>Self destructs</Hands> after <Hands>5 turns</Hands></span>
+				</div>
+			</td>
+			<td>
+				Previously removed from the Standard ruleset, now available with a turn limit.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### The Order [toc]
+				<JokerCard name={'The Order'} img={'/cards/j_order.png'}/>
+			</td>
+			<td>
+				<Xmult>X3</Xmult> Mult if played hand contains a <Hands>Straight</Hands>
+			</td>
+			<td>
+				<Xmult>X4</Xmult> Mult if played hand contains a <Hands>Straight</Hands> and <Hands>no face cards</Hands>
+			</td>
+			<td>
+				Increased multiplier but adds face card restriction.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Loyalty Card [toc]
+				<JokerCard name={'Loyalty Card'} img={'/cards/j_loyalty_card.png'}/>
+			</td>
+			<td>
+				<Xmult>X4</Xmult> Mult every <Hands>6</Hands> hands played
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span><Xmult>X6</Xmult> Mult every <Hands>4</Hands> hands played with selected hand type</span>
+					<span>Hand type selected upon purchase</span>
+				</div>
+			</td>
+			<td>
+				More powerful but restricted to a specific poker hand type.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Misprint [toc]
+				<JokerCard name={'Misprint'} img={'/cards/j_misprint.png'}/>
+			</td>
+			<td>
+				<Mult>+0</Mult> to <Mult>+23</Mult> Mult
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span><Mult>-23</Mult> to <Mult>+46</Mult> Mult</span>
+					<span>Mult value revealed on purchase</span>
+					<span>Range doubled by <Hands>Oops All 6s</Hands></span>
+				</div>
+			</td>
+			<td>
+				Higher risk/reward with visible value and potential for negative mult.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Castle [toc]
+				<JokerCard name={'Castle'} img={'/cards/j_castle.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Chips>+3</Chips> Chips per discarded card of suit</span>
+					<span>Suit changes every round</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Chips>+10</Chips> Chips per discarded card of suit</span>
+					<span>Suit <Hands>never changes</Hands></span>
+				</div>
+			</td>
+			<td>
+				More consistent with fixed suit and higher scaling per discard.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Mail-in Rebate [toc]
+				<JokerCard name={'Mail-in Rebate'} img={'/cards/j_mail.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Earn <Money>$5</Money> for each discarded card of rank</span>
+					<span>Rank changes every round</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Earn <Money>$7</Money> for each discarded card of rank</span>
+					<span>Rank <Hands>never changes</Hands></span>
+				</div>
+			</td>
+			<td>
+				More consistent with fixed rank and increased payout.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Square Joker [toc]
+				<JokerCard name={'Square Joker'} img={'/cards/j_square.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Chips>+4</Chips> Chips if played hand has exactly <Hands>4</Hands> cards</span>
+					<span>Starts at <Chips>0</Chips> Chips</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Chips>+8</Chips> Chips if played hand has exactly <Hands>4</Hands> cards</span>
+					<span>Starts with <Chips>64</Chips> Chips</span>
+					<span>Chips only apply when played hand has exactly <Hands>4</Hands> cards</span>
+				</div>
+			</td>
+			<td>
+				Double scaling rate with significant starting value, but chips only count when condition is met.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Throwback [toc]
+				<JokerCard name={'Throwback'} img={'/cards/j_throwback.png'}/>
+			</td>
+			<td>
+				<Xmult>X0.25</Xmult> Mult for each <Hands>Blind</Hands> skipped this run
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span><Xmult>X0.25</Xmult> Base Mult for each <Hands>Blind</Hands> skipped this run</span>
+					<span><Xmult>X0.75</Xmult> additional mult next Blind after skipping</span>
+					<span>Loses <Xmult>X0.75</Xmult> mult when blind not skipped</span>
+				</div>
+			</td>
+			<td>
+				Adds momentum mechanic that rewards consecutive skips.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Vampire [toc]
+				<JokerCard name={'Vampire'} img={'/cards/j_vampire.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Xmult>X0.1</Xmult> Mult per scoring <Hands>Enhanced card</Hands> played</span>
+					<span>Removes enhancement from card</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>This Joker gains <Xmult>X0.2</Xmult> Mult per scoring <Hands>Enhanced card</Hands> played</span>
+					<span>Transforms played card into <Hands>Stone</Hands></span>
+					<span>Played stone cards give <Money>$3</Money></span>
+				</div>
+			</td>
+			<td>
+				Double scaling with added economy through stone card conversion.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Steel Joker [toc]
+				<JokerCard name={'Steel Joker'} img={'/cards/j_steel_joker.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Gives <Xmult>X0.2</Xmult> Mult for each <Hands>Steel Card</Hands> in your full deck</span>
+				</div>
+			</td>
+			<td>
+				<Hands>Steel cards</Hands> are <Hands>retriggered</Hands> when played
+			</td>
+			<td>
+				Complete mechanical rework focusing on retriggers instead of passive mult scaling.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Baseball Card [toc]
+				<JokerCard name={'Baseball Card'} img={'/cards/j_baseball.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span><Hands>Uncommon</Hands> Jokers each give <Xmult>X1.5</Xmult> Mult</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span><Hands>Uncommon</Hands> Jokers each give <Xmult>X2</Xmult> Mult</span>
+					<span className={'text-xs'}>SPORTS CARD "CONTROVERSY"</span>
+					<span className={'text-xs'}>DISGUISED AS BALANCE CHANGE!!!</span>
+				</div>
+			</td>
+			<td>
+				Increased multiplier per uncommon joker.
+			</td>
+		</tr>
+		<tr>
+			<td>
+				#### Idol [toc]
+				<JokerCard name={'Idol'} img={'/cards/j_idol.png'}/>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Each played card of specific rank and suit gives <Xmult>X2</Xmult> Mult when scored</span>
+					<span>Card changes every round</span>
+				</div>
+			</td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Randomly picks one of three idol variants to add to pool:</span>
+					<span><Hands>Zealot Idol:</Hands> Each card of suit gives <Xmult>X1.5</Xmult> Mult (suit changes each round)</span>
+					<span><Hands>Tantrum Idol:</Hands> Gains <Xmult>X0.5</Xmult> Mult each round, starts at <Xmult>X1</Xmult>, resets when played</span>
+					<span><Hands>Meta Idol:</Hands> Most common card in deck gives <Xmult>X(0.05 per card)</Xmult> Mult when scored</span>
+				</div>
+			</td>
+			<td>
+				Split into three variants with different mechanics. Now a <Hands>Rare</Hands> joker.
+			</td>
+		</tr>
+		</tbody>
+	</table>
+</div>
 
-## Tags
-- Juggler Tag
-- Investment Tag
+## Spectral Cards
 
-## Spectral cards
-- Ouija: old effect changes rank, -1 hand size for rest of game. New effect: Destroys 3 random cards in your hand, then changes cards to a random rank
-- Ectoplasm: old effect: 1 negative joker, -1 hand size, hand size reduction increments per use. New effect: 1 negative joker, -1 (hand size / discard / hand). does NOT increment.
-
-## Glass changes
-Justice is back. Glass now breaks at 1/3 rate.
-
-## Stakes
-Adds three new Stakes
-
-## Other changes
-
-## Rationale
-...
-
-Base
-
-Includes all Multiplayer Jokers.
-Also re-adds Magnet...
-There are **10 added multiplayer jokers**. All jokers added in the multiplayer mod are designed
-to **interact with your opponent** and will not show up in single player games.
-
-### Modified Cards
-
-Table to fill in the same format as standard.mdx
 <div className={'relative overflow-auto'}>
 	<table>
 		<thead>
@@ -64,121 +286,81 @@ Table to fill in the same format as standard.mdx
 		<tbody>
 		<tr>
 			<td>
-				#### Defensive Joker [toc]
-				<JokerCard name={'Defensive Joker'} img={'/cards/j_mp_defensive_joker.png'}/>
-			</td>
-			<td>
-				<Chips>+125</Chips> Chips for every life less than your <Nemesis>Nemesis</Nemesis>.
-			</td>
-			<td>
-				There is a bug where this joker might appear in single player mode. To fix this, disable the multiplayer
-				mod when playing single player.
-			</td>
-		</tr>
-		<tr>
-			<td>
-				#### Skip-Off [toc]
-				<JokerCard name={'Skip-Off'} img={'/cards/j_mp_skip_off.png'}/>
-			</td>
-			<td>
-				<Hands>+1</Hands> Hands and <Hands>+1</Hands> Discards per additional <Hands>Blind</Hands> skipped compared to your
-				<Nemesis>Nemesis</Nemesis>.
-			</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>
-				#### Let's Go Gambling [toc]
-				<JokerCard name={'Let\'s Go Gambling'} img={'/cards/j_mp_lets_go_gambling.png'}/>
+				#### Ouija [toc]
+				<JokerCard name={'Ouija'} img={'/cards/c_ouija.png'}/>
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-					<span><Chance>1 in 4</Chance> chance for <Xmult>X4</Xmult> Mult and <Money>$10</Money></span>
-					<span><Chance>1 in 4</Chance> chance to give your <Nemesis>Nemesis</Nemesis> <Money> $10</Money> in <Hands>PvP Blind</Hands></span>
+					<span>Converts all cards in hand to a single random <Hands>rank</Hands></span>
+					<span><Hands>-1</Hands> hand size</span>
 				</div>
-			</td>
-			<td>
-				The effect applies on each hand played.
-			</td>
-		</tr>
-		<tr>
-			<td>
-				#### Speedrun [toc]
-				<JokerCard name={'Speedrun'} img={'/cards/j_mp_speedrun.png'}/>
-			</td>
-			<td>
-				If you reach a <Hands>PvP Blind</Hands> before your <Nemesis>Nemesis</Nemesis>, create a
-				random <Spectral>Spectral</Spectral> card. Must have room.
-			</td>
-			<td>
-				There is a bug where the spectral card might not be created, but is is very rare. We're working on a
-				fix.
-			</td>
-		</tr>
-		<tr>
-			<td>
-				#### Conjoined Joker [toc]
-				<JokerCard name={'Conjoined Joker'} img={'/cards/j_mp_conjoined_joker.png'}/>
-			</td>
-			<td>
-				While in a <Hands>PvP Blind</Hands>, gain
-				<Xmult>X0.5</Xmult> Mult for every <Hands>Hand</Hands>
-				your <Nemesis>Nemesis</Nemesis> has left
-				(Max <Xmult>X3</Xmult> Mult)
-			</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>
-				#### Penny Pincher [toc]
-				<JokerCard name={'Penny Pincher'} img={'/cards/j_mp_penny_pincher.png'}/>
-			</td>
-			<td>
-				At start of shop, gain
-				<Money>$1</Money> for every <Money>$3</Money> your <Nemesis>Nemesis</Nemesis> spent in the corresponding shop <Hands>last ante</Hands>
-			</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>
-				#### Taxes [toc]
-				<JokerCard name={'Taxes'} img={'/cards/j_mp_taxes.png'}/>
-			</td>
-			<td>
-				Gains <Mult>+4</Mult> Mult for every card your <Nemesis>Nemesis</Nemesis> <Hands>sold</Hands> since last <Hands>PvP Blind</Hands>,
-				updates when <Hands>PvP Blind</Hands> is selected
-			</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td>
-				#### Pizza [toc]
-				<JokerCard name={'Pizza'} img={'/cards/j_mp_pizza.png'}/>
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-					<span>At the end of the next <Hands>PvP Blind</Hands>, consume this Joker and grant <Mult>+1</Mult> discard to you and <Mult>+2</Mult> discards to your <Nemesis>Nemesis</Nemesis> for the ante</span>
-					<span>Eaten after <Hands>PvP Blind</Hands></span>
+					<span>Destroy <Hands>3</Hands> random cards in hand</span>
+					<span>Then convert all remaining cards to a single random <Hands>rank</Hands></span>
+					<span>No hand size penalty</span>
 				</div>
 			</td>
-			<td></td>
+			<td>
+				Removes the permanent hand size penalty but destroys cards before conversion.
+			</td>
 		</tr>
 		<tr>
 			<td>
-				#### Pacifist [toc]
-				<JokerCard name={'Pacifist'} img={'/cards/j_mp_pacifist.png'}/>
+				#### Ectoplasm [toc]
+				<JokerCard name={'Ectoplasm'} img={'/cards/c_ectoplasm.png'}/>
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-					<Xmult>X10</Xmult> Mult while not in a <Hands>PvP Blind</Hands>
+					<span>Add <Hands>Negative</Hands> to a random <Hands>Joker</Hands></span>
+					<span><Hands>-1</Hands> hand size (increments per use)</span>
 				</div>
 			</td>
-			<td></td>
+			<td>
+				<div className={'flex flex-col gap-1'}>
+					<span>Add <Hands>Negative</Hands> to a random <Hands>Joker</Hands></span>
+					<span>Randomly apply one of: <Hands>-1</Hands> hand, <Hands>-1</Hands> discard, or <Hands>-1</Hands> hand size</span>
+					<span>Does NOT increment on repeated use</span>
+				</div>
+			</td>
+			<td>
+				Penalty is randomized but no longer stacks, making it more predictable for multiple uses.
+			</td>
 		</tr>
 		</tbody>
 	</table>
 </div>
 
+## Tags
+
+- **Juggler Tag:** [Details to be added]
+- **Investment Tag:** [Details to be added]
+
+## Glass Cards
+
+Justice Tarot card is re-enabled in this ruleset. Glass cards now break at **1/3 rate** (1 in 12 chance instead of 1 in 4).
+
+## Stakes
+
+Adds three new Stakes [Details to be added]
+
+## Multiplayer Jokers
+
+All multiplayer jokers from the Standard ruleset are included and available in Sandbox mode. See [Standard ruleset](/docs/rulesets/standard#multiplayer-jokers) for details.
+
 <Callout>
 	These jokers can be removed by unchecking the **"Enable Multiplayer Cards"** option in the lobby options.
 </Callout>
+
+## Rationale
+
+The Sandbox ruleset serves as a testing ground for potential balance changes before they're considered for Standard play. Changes focus on:
+
+- **Increased build diversity:** Modifications to underused jokers to make them more competitive
+- **Risk/reward balance:** Adjustments to cards with high variance or inconsistent effects
+- **Consistency improvements:** Removing RNG elements that change every round (Castle, Mail-in Rebate)
+- **Mechanical experimentation:** Testing new interactions (Steel Joker retriggers, Vampire stone conversion)
+- **Power level adjustments:** Buffing weak cards while adding restrictions to powerful ones
+
+Changes are regularly rotated and refined based on playtesting feedback. Successful modifications may eventually be promoted to the Standard ruleset.
