--- a/content/docs/rulesets/sandbox.mdx
+++ b/content/docs/rulesets/sandbox.mdx
@@ -241,7 +241,7 @@ Based on the Standard ruleset, with the following changes:
 				</div>
 			</td>
 			<td>
-				Increased multiplier per uncommon joker.
+				Community retcon
 			</td>
 		</tr>
 		<tr>
@@ -257,14 +257,14 @@ Based on the Standard ruleset, with the following changes:
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-					<span>Randomly picks one of three idol variants to add to pool:</span>
-					<span><Hands>Zealot Idol:</Hands> Each card of suit gives <Xmult>X1.5</Xmult> Mult (suit changes each round)</span>
-					<span><Hands>Tantrum Idol:</Hands> Gains <Xmult>X0.5</Xmult> Mult each round, starts at <Xmult>X1</Xmult>, resets when played</span>
-					<span><Hands>Meta Idol:</Hands> Most common card in deck gives <Xmult>X(0.05 per card)</Xmult> Mult when scored</span>
+					<span>On start of game, randomly picks one of three idol variants to add to pool:</span>
+					<span><Hands>The Zealot Idol:</Hands> Each played <Hands>Rank</Hands> gives <Xmult>X1.5</Xmult> Mult when scored (rank changes each round)</span>
+					<span><Hands>The Idol of Abstinence:</Hands> Each played <Hands>Rank</Hands> of <Hands>Suit</Hands> gives <Xmult>X1</Xmult> Mult when scored. Gains <Xmult>X0.5</Xmult> Mult each round. Resets to <Xmult>X1</Xmult> when played.</span>
+					<span><Hands>The Hoarder's Idol:</Hands> Most common card in deck gives <Xmult>X(1 + 0.05 per card)</Xmult> Mult when scored</span>
 				</div>
 			</td>
 			<td>
-				Split into three variants with different mechanics. Now a <Hands>Rare</Hands> joker.
+				Split into three variants with different mechanics.
 			</td>
 		</tr>
 		</tbody>
