summarize modified content

--- a/content/docs/rulesets/sandbox.mdx
+++ b/content/docs/rulesets/sandbox.mdx
@@ -12,6 +12,7 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 - **Comeback Gold Mechanic:** $3 per completed Ante (was $4 per life lost)
 - **Score Preview:** Disabled - removes calculation paralysis, speeds up play
 - **Glass Cards:** Justice back in Tarot pool, glass cards break at 1/3 rate
+- **Modified Content:** 12 jokers, 2 spectral cards, 3 tags, 3 new stakes - see below
 
 ## Modified Jokers
 
@@ -327,11 +328,12 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 </div>
 
 ## Tags
+- **Gambling Tag**: Replaces Rare Tag. 1/2 chance for free Rare Joker next shop
 - **Juggle Tag**: +1 hand size next PvP Blind (changed from affecting next blind to specifically targeting PvP blinds)
 - **Investment Tag**: After defeating Boss Blind, gain $5 + $10 per completed Ante (scales with progression instead of flat $25)
 ## Glass Cards
 
-Justice is back in the Tarot pool. Glass cards now break at **1/3 rate** (1 in 12 chance instead of 1 in 4).
+Justice is back in the Tarot pool. Glass cards now break at **1/3 rate** (instead of 1 in 4).
 
 ## Stakes
 
