update the order description

--- a/content/docs/rulesets/sandbox.mdx
+++ b/content/docs/rulesets/sandbox.mdx
@@ -36,10 +36,10 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 				<Xmult>X3</Xmult> Mult if played hand contains a <Hands>Straight</Hands>
 			</td>
 			<td>
-				<Xmult>X4</Xmult> Mult if played hand contains a <Hands>Straight</Hands> and <Hands>no face cards</Hands>
+			<Xmult>X3</Xmult> Mult if played hand contains a <Hands>Straight</Hands>. Gains <Xmult>X0.5</Xmult> Mult for each consecutive <Hands>Straight</Hands> played this round, resets when any other hand is played
 			</td>
 			<td>
-			Bigger multiplier but hates royalty. Peasant straights only.
+			Scaling momentum reward for committing to straights. Finally viable?
 			</td>
 		</tr>
 		<tr>
