--- a/content/docs/rulesets/sandbox.mdx
+++ b/content/docs/rulesets/sandbox.mdx
@@ -134,7 +134,7 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-					<span>This Joker gains <Chips>+8</Chips> Chips if played hand has exactly <Hands>4</Hands> cards</span>
+					<span>This Joker gains <Chips>+16</Chips> Chips if played hand has exactly <Hands>4</Hands> cards</span>
 					<span>Starts with <Chips>64</Chips> Chips</span>
 					<span><Mult>Only applies with 4-card hands</Mult></span>
 				</div>
@@ -233,11 +233,11 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 			</td>
 			<td>
 				<div className={'flex flex-col gap-1'}>
-				One of three variants added to joker pool at game start - Zealot (<Mult>X1.5</Mult> per rank), Abstinence (builds Mult between plays), Hoarder (rewards card hoarding).
+				One of two variants added to joker pool at game start - Zealot (<Mult>X1.5</Mult> per rank) and Hoarder (rewards card hoarding).
 				</div>
 			</td>
 			<td>
-			Split into three jealous gods. They don't play nice together.
+			Split into two jealous gods. They don't play nice together.
 			</td>
 		</tr>
 		<tr>
@@ -254,8 +254,7 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 			<td>
 				<div className={'flex flex-col gap-1'}>
 					<span>Gains <Xmult>X0.75</Xmult> Mult for every <Hands>Jack</Hands> discarded</span>
-					<span>Discarded Jacks are <Hands>destroyed</Hands></span>
-					<span>Mult gain is permanent</span>
+					<Hands>Discarded Jacks are destroyed</Hands>
 				</div>
 			</td>
 			<td>
@@ -298,7 +297,7 @@ Sandbox tests mechanical changes that reshape how you approach the game. Score p
 				</div>
 			</td>
 			<td>
-			Permanent hand size penalty killed this card. Now it's Immolate's chaotic cousin.
+			Immolate's chaotic cousin.
 			</td>
 		</tr>
 		<tr>
